May 20 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Macro system remade again for everything but character

May 19 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Reading and seeing works again

May 19 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* More character macro tweaks
	* The game *might* compile now

May 18 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Itemde.h converted largely to Script/item.dat
	(The current version does NOT compile on Linux)

May 13 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Character macro remade

May 12 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Characters datafiled (mostly)
	* The game is still mad

May 12 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The game executes again
	* The game is totally mad again
	* Polymorph works again, and better than before
	* Character database structures added
	* Define headers added

May 11 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Price added to item database structure

May 10 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Copied the materials to Script/material.dat (however with some problems.)
	* Added ring of fire resistance

May 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Very lousy item database structures added
	* The Ultimate Script Malfunction Error Bug of Underscore Conflict corrected, not maybe
	* Many new bug adds

May 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The Ultimate Script Malfunction Error Bug of Underscore Conflict corrected, maybe

May 9 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Bug corrections

May 9 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Material database structures added

May 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Wand of resurrection added

May 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Animations work now with SDL
	* Wand of locking added 

May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Animations work in the DOS port now

May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Heavily modified the material system